--- a/index.html
+++ b/index.html
@@ -129,27 +129,27 @@
     <section id="languages">
         <div class="container">
             <div class="language-box">
-                <img src="/api/placeholder/90/90" alt="C# Logo">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIv06LdmU38pm8F2YPvh0-2hMYIlMV1pmxkg&s" alt="C# Logo">
                 <h3>C#</h3>
                 <p>Discuss Unity development and more</p>
             </div>
             <div class="language-box">
-                <img src="/api/placeholder/90/90" alt="C++ Logo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/1822px-ISO_C%2B%2B_Logo.svg.png" alt="C++ Logo">
                 <h3>C++</h3>
                 <p>Talk about Unreal Engine and low-level optimization</p>
             </div>
             <div class="language-box">
-                <img src="/api/placeholder/90/90" alt="JavaScript Logo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" alt="JavaScript Logo">
                 <h3>JavaScript</h3>
                 <p>Explore web-based game development</p>
             </div>
             <div class="language-box">
-                <img src="/api/placeholder/90/90" alt="Lua Logo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Lua-Logo.svg" alt="Lua Logo">
                 <h3>Lua</h3>
                 <p>Scripting for game engines and more</p>
             </div>
             <div class="language-box">
-                <img src="/api/placeholder/90/90" alt="HTML Logo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png" alt="HTML Logo">
                 <h3>HTML</h3>
                 <p>Create game interfaces and web-based games</p>
             </div>
